- Adapted to latest intact-annotations - Fixed PsiClassLoader. It was not working properly in windows